--- a/client/main.html
+++ b/client/main.html
@@ -1,8 +1,5 @@
 <head>
-  <title>simple</title>
+  <title>Datalyst</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-
-<body>
-  <p id="title">Datalyst</p>
-  {{> info }}
-</body>
