--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,10 @@
 <head>
-  <title>Datalyst</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="icon" sizes="192x192" href="/images/nice-highres.png" />
+    <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
+    <title>Ryan Thomas</title>
+    <base href="/">
+    <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
+    <script src="/tether.js"></script>
 </head>
