--- a/client/main.html
+++ b/client/main.html
@@ -3,7 +3,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="icon" sizes="192x192" href="/images/nice-highres.png" />
     <link rel="apple-touch-icon" href="/images/apple-touch-icon.png" />
-    <title>Ryan Thomas</title>
+    <title>Datalyst</title>
     <base href="/">
     <link href="https://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet">
     <script src="/tether.js"></script>
